style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Serif+Text:ital@0;1&family=Forum&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

html {
  scroll-behavior: smooth;
}
*{
    box-sizing: border-box;
}
.container{
    max-width: 1440px;
    margin: 75px 0;
}
body{
    font-family: Roboto;
    min-height: 100vh;
    max-width: 100vw;
    margin:0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-self: center;
}
.header{
    display:flex;
    align-items: center;
    position: relative;
    overflow-y:clip;
    width: 1440px;
    background-color: #030303;
    color: white;
    height: 150px;
}

.header-container{
    width: 1440px;
    display:flex;
    justify-content: space-between;
    align-items: center;
    margin:0;
}
.nav-list{
    display:flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
    font-family: Roboto;
    font-size: 22px;
    font-weight: 200;
    letter-spacing: 2px;
    padding:0;
}
.nav-link{
    text-decoration: none;
    color: white;
}
.logo{
    width: 199px;
    height: 33px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.logo-image{
    width: 49px;
    height: 26px;
}
.nav{
    width: 775px;
}
.nav-title{
    font-family: Forum;
    font-size: 28px;
    letter-spacing: 5px;
}
.main{
    width: 1440px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin:0;
}
.container-main{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin:0;
}
.welcome{
    position: relative;
    display: flex;
    align-items: center;
    overflow-y: clip;
    width: 1440px;
    height: 810px;
    margin-bottom:75px;
}
.welcome-container{
    width: 1440px;
}
.background-black{
    position:absolute;
    width: 100vw;
    height: 100%;
    left: 50%;
    transform: translateX(-50%);
    z-index: -1;
    background-color: #030303;
}
.welcome-text{
    position:absolute;
    top:150px;
    z-index: 1;
}
.welcome-title{
    color: white;
    font-family: Forum;
    letter-spacing: 5px;
    text-transform: uppercase;
    font-size: 80px;
    font-weight: 400;
    line-height: 90px;
    margin-block: auto;
    display:inline-block;
}
.welcome-subtitle{
    color:white;
    font-family: Roboto;
    font-weight: 300;
    font-size: 28px;
    letter-spacing: 2px;
    margin:0;
    margin-top: 25px;
}
.welcome-button{
    display:flex;
    justify-content: center;
    align-items: center;    
    height: 75px;
    width: 360px;
    background-color: #710707;
    border-radius: 10px;
    margin-top: 75px;
}
.welcome-link{
    text-decoration: none;
}
.welcome-button-title{
    display: inline-block;
    color: white;
    font-family: roboto;
    font-weight: 300;
    font-size: 22px;
    letter-spacing: 2px;
    line-height: 100%;
    margin:0;
}
.welcome-slider{
    position:absolute;
    top:0;
    z-index: 0;
    right: 0;
    height: 750px;
}
.slider-image{
    width: 1000px;
    height: 750px;
}
.welcome-slider:after{
    content:"";
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top:0;
    left: 0;
    background: transparent;
    background: linear-gradient(to right,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0) 50%);
}
.welcome-slider-pagination{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    position: absolute;
    width: 600px;
    height: 120px;
    background-color: #030303;
    right: 0;
    bottom:0;
    z-index: 100;
}
.welcome-slider-num{
    display: flex;
    justify-content: space-between;
    width: 76px;
    margin-left: 14px;
}
.welcome-num-text{
    font-family: Roboto;
    font-weight: 400;
    font-size: 22px;
    line-height: 40px;
    letter-spacing: 0px;
    vertical-align: middle;
    text-transform: uppercase;
    color:white;
    margin:0;
}
.welcome-carousel-pagination{
    width: 180px;
    display: flex;
    justify-content: space-between;
    margin-right: 4px;
}
.carousel-block{
    width: 16px;
    height: 16px;
    background-color: white;
}
.welcome-slider-arrows{
    width: 80px;
    display: flex;
    justify-content: space-between;
    margin-right: 13px;
}
.slider-arrow-right{
    rotate: 180deg;
}
.visiting{
    width: 1440px;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom:63px;
}
.visiting-title{
    font-family: Forum;
    font-weight: 400;
    font-size: 80px;
    line-height: 90px;
    letter-spacing: 5px;
    text-transform: uppercase;

    color: #9D8665;
    margin:0;
}
.title-line{
    border:none;
    background-color: #710707;
    height: 3px;
    width: 1440px;
    margin-top: 25px;
    margin-bottom: 75px;
}
.visiting-list{
    display:flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.visiting-item{
    display:flex;
    flex-direction: column;
    margin-bottom: 65px;
}
.visiting-item-2{
    margin:0;
}
.visiting-link{
    width: 440px;
    height: 285px;
}
.visiting-image{
    width: 100%;
    height: 100%;
}
.virtual_tour-title{
    font-family: Forum;
    font-weight: 400;
    font-size: 32px;
    line-height: 100%;
    letter-spacing: 5px;
    text-transform: uppercase;
    margin:0;
    margin-top: 26px;
}
.virtual_tour-subtitle{
    font-family: Roboto;
    font-weight: 200;
    font-size: 22px;
    line-height: 100%;
    letter-spacing: 0%;
    margin:0;
    margin-bottom: 13px;
}
.virtual_tour-subtitle2{
    font-family: Roboto;
    font-weight: 200;
    font-size: 18px;
    line-height: 100%;
    letter-spacing: 0%;
    margin:0;
}
.visiting-item-line{
    border:none;
    background-color: #710707;
    width: 300px;
    height: 2px;
    margin: 12px 0;
}
.explore{
    position: relative;
    width: 1440px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    overflow-y: clip;
}
/* ... */

